# bayesgrid

./: .gitignore  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt
notebook_tutorials/: 1 Creating synthetic grids from pandapower networks.ipynb  2 Synthetic grids anywhere with OpenStreetMaps.ipynb  3 Learning the bayesian model from new data.ipynb  4 Generating Pandapower or opendss files based on the synthetic data copy.ipynb  4 Generating Pandapower or opendss files based on the synthetic data.ipynb  5 Visualization of generated grids.ipynb  6 Multiple feeders and transmission level integration.ipynb  Creating synthetic grids from pandapower networks.ipynb  Synthetic grids anywhere with OpenStreetMaps.ipynb  synthetic_case118_pandapower
notebook_tutorials/my_new_traces/: my_dur_trace.nc  my_freq_trace.nc  my_power_trace.nc  my_r_trace.nc  my_x_trace.nc
notebook_tutorials/new_osm_synthetic_net/: bus_duration_SAMPLES.csv  bus_frequency_SAMPLES.csv  bus_power_and_phase_SAMPLES.csv  pandapower_network.p
notebook_tutorials/new_pp_synthetic_net/: bus_duration_SAMPLES.csv  bus_frequency_SAMPLES.csv  bus_power_and_phase_SAMPLES.csv  line_impedance_SAMPLES.csv
notebook_tutorials/synthetic_net_opendss/: master_sample_0.dss  master_sample_1.dss  master_sample_10.dss  master_sample_11.dss  master_sample_12.dss  master_sample_13.dss  master_sample_14.dss  master_sample_15.dss  master_sample_16.dss  master_sample_17.dss  master_sample_18.dss  master_sample_19.dss  master_sample_2.dss  master_sample_20.dss  master_sample_21.dss  (+85 more)
test/: test_package.py
(+110 files in other folders)
