[project]
name = "bayesgrid"
version = "0.1.0"
description = "A python tool for generating synthetic, unbalanced power distribution systems using bayesian models"
readme = "README.rst"
requires-python = ">=3.11"


dependencies = [
    "arviz==0.21.0",
    "matplotlib==3.7.2",
    "networkx==3.1",
    "numpy==1.26.4",
    "osmnx==2.0.6",
    "pandapower==3.1.1",
    "pandas==2.3.3",
    "pymc==5.23.0",
    "pytensor==2.31.4",
    "scipy==1.12.0",
    "xarray==2025.6.1",
    "pooch==1.8.2"
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = ["src"]